--- a/styles/defaultClasses.css
+++ b/styles/defaultClasses.css
@@ -46,6 +46,9 @@
   .dropdown__ul {
     @apply flex my-1 items-center space-x-2 p-2 rounded-xl bg-white dark:bg-darkSecondary shadow-2xl w-fit;
   }
+  .breadcrumbs__div {
+    @apply sticky top-[3.5rem] mt-[3.5rem] bg-white dark:bg-[#141417] rounded-bl-[2rem] duration-150
+  }
 }
 
 /* ==================== MEN ================= */
