--- a/styles/defaultClasses.css
+++ b/styles/defaultClasses.css
@@ -47,7 +47,7 @@
     @apply flex my-1 items-center space-x-2 p-2 rounded-xl bg-white dark:bg-darkSecondary shadow-2xl w-fit;
   }
   .breadcrumbs__div {
-    @apply sticky top-[3.5rem] mt-[3.5rem] bg-gray-100 dark:bg-[#141417] duration-150;
+    @apply sticky z-30 top-[3.5rem] mt-[3.5rem] bg-gray-100 dark:bg-[#141417] duration-300 shadow-md;
   }
 }
 
