--- a/styles/defaultClasses.css
+++ b/styles/defaultClasses.css
@@ -8,7 +8,10 @@
     @apply text-secondary cursor-pointer hover:text-primary font-medium dark:hover:text-white whitespace-nowrap dark:group-hover:text-white;
   }
   .sidebar__link {
-    @apply text-secondary cursor-pointer hover:text-primary font-normal py-1 dark:hover:text-white whitespace-nowrap dark:group-hover:text-white;
+    @apply text-secondary cursor-pointer hover:text-blue-500 font-medium py-0.5 dark:hover:text-white whitespace-nowrap dark:group-hover:text-white;
+  }
+  .sidebar__link:active {
+    @apply text-blue-600
   }
   .sidebar {
     @apply bg-white dark:bg-darkSecondary fixed z-[100] h-screen w-[240px] transform -translate-x-full px-5 overflow-y-auto scrollbar-hide duration-200;
