--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,10 @@ html {
     --color-secondary: #808b96;
     --color-dark-primary: #1e2023;
     --color-dark-secondary: #18191c;
+
+    --border-radius-lg: 0.75rem;
+    --border-radius-sm: 0.5rem;
+    --duration: 200ms;
   }
 }
 
